--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,56 +1,5 @@
-#server:
-#  port: 8082
-#  servlet:
-#    context-path: '/ead-course/'
-#
 spring:
+  profiles:
+    active: dev
   application:
     name: ead-course-service
-  config:
-    import: 'optional:configserver:'
-  cloud:
-    config:
-      discovery:
-        serviceId: ead-config-server
-      username: configserver
-      password: 'ead123cs'
-#  datasource:
-#    url: jdbc:postgresql://localhost:5432/ead-course
-#    username: postgres
-#    password: root
-#  jpa:
-#    hibernate:
-#      ddl-auto: update
-#      dialect: org.hibernate.dialect.PostgreSQLDialect
-#      jdbc:
-#        lob.non-contextual-creation: true
-#    properties:
-#      hibernate:
-#        show_sql: true
-#  rabbitmq:
-#    addresses: amqps://uyfpgewb:f2dpD0f9MMPEclbjTlxMBaD2xXch-jqn@chimpanzee.rmq.cloudamqp.com/uyfpgewb
-#
-#logging:
-#  level:
-#    com.ead: TRACE
-#    root: INFO
-#    org.springframework.web: DEBUG
-#    org.hibernate: INFO
-#
-#ead:
-#  api:
-#    url:
-#      authuser: 'http://ead-authuser-service/ead-authuser'
-#  broker:
-#    exchange:
-#      userEventExchange: ead.userevent
-#    queue:
-#      userEventQueue:
-#        name: ead.userevent.ms.course
-#
-#eureka:
-#  client:
-#    service-url:
-#      defaultZone: 'http://localhost:8761/eureka'
-#    instance:
-#      hostname: localhost
